[package]
name          = "esp-metadata-generated"
version       = "0.0.1"
edition       = "2024"
rust-version  = "1.86.0"
description   = "Generated metadata for Espressif devices"
documentation = "https://docs.espressif.com/projects/rust/esp-metadata-generated/latest/"
repository    = "https://github.com/esp-rs/esp-hal"
license       = "MIT OR Apache-2.0"

[dependencies]

[build-dependencies]
esp-metadata = { version = "0.7.0", path = "../esp-metadata" } # TODO: remove

[features]
build-script = []
esp32   = []
esp32c2 = []
esp32c3 = []
esp32c6 = []
esp32h2 = []
esp32s2 = []
esp32s3 = []
