[package]
name          = "esp-metadata"
version       = "0.7.0"
edition       = "2024"
rust-version  = "1.86.0"
description   = "Metadata for Espressif devices"
documentation = "https://docs.espressif.com/projects/rust/esp-metadata/latest/"
repository    = "https://github.com/esp-rs/esp-hal"
license       = "MIT OR Apache-2.0"

[dependencies]
anyhow     = { version = "1.0.98" }
clap       = { version = "4.5.37", features = ["derive"], optional = true }
basic-toml = { version = "0.1.10" }
serde      = { version = "1.0.219", default-features = false, features = ["derive"] }
strum      = { version = "0.27.1", features = ["derive"] }
syn        = { version = "2", default-features = false, features = ["full", "parsing"], optional = true }
proc-macro2 = { version = "1.0.36" }
quote      = { version = "1.0.15" }
prettyplease = { version = "0.2.34", optional = true }

[features]
default = []
clap = ["dep:clap"]
pretty = ["dep:prettyplease", "dep:syn"]
