[package]
name          = "esp-metadata"
version       = "0.10.0"
edition       = "2024"
rust-version  = "1.86.0"
description   = "Metadata for Espressif devices"
documentation = "https://docs.espressif.com/projects/rust/esp-metadata/latest/"
repository    = "https://github.com/esp-rs/esp-hal"
license       = "MIT OR Apache-2.0"

[package.metadata.espressif]
forever-unstable = true
check-configs = [
    { features = [] },
    { features = ["clap"] },
]
clippy-configs = [] # don't waste time on this

[dependencies]
anyhow       = "1.0"
clap         = { version = "4.5", features = ["derive"], optional = true }
convert_case = "0.8"
basic-toml   = "0.1"
schemars     = { version = "1", optional = true }
serde        = { version = "1.0", default-features = false, features = ["derive"] }
somni-parser = "0.2.1"
somni-expr   = "0.2"
strum        = { version = "0.27", features = ["derive"] }
proc-macro2  = "1"
quote        = "1"
indexmap     = { version = "2", features = ["serde"] }

[features]
default = []
clap = ["dep:clap"]
schemars = ["dep:schemars"]
